syntax = "proto3";

package api.server.order.v1;

import "google/api/annotations.proto";

option go_package = "github.com/mohaijiang/computeshare-server/api/order/v1;v1";
option java_multiple_files = true;
option java_package = "api.order.v1";

service Order {
	rpc AlipayPayNotify (AlipayPayNotifyRequest) returns (AlipayPayNotifyReply){
		option (google.api.http) = {
			post: "/v1/alipay/pay/notify",
			body: "*"
		};
	};
	rpc RechargeCycleByAlipay (RechargeCycleByAlipayRequest) returns (RechargeCycleByAlipayReply){
		option (google.api.http) = {
			post: "/v1/cycle/recharge",
			body: "*"
		};
	};
	rpc RechargeCycleByRedeemCode (RechargeCycleByRedeemCodeRequest) returns (RechargeCycleByRedeemCodeReply){
		option (google.api.http) = {
			post: "/v1/cycle/redeem",
			body: "*"
		};
	};
}

// https://opendocs.alipay.com/open/203/105286#%E5%BC%82%E6%AD%A5%E9%80%9A%E7%9F%A5%E5%8F%82%E6%95%B0
message AlipayPayNotifyRequest {
	string notify_time =1;
	string notify_type =2;
	string notify_id =3;
	string app_id =4;
	string charset =5;
	string version =6;
	string sign_type =7;
	string sign =8;
	string trade_no =9;
	string out_trade_no =10;
	string out_biz_no =11;
	string buyer_id =12;
	string buyer_logon_id =13;
	string seller_id =14;
	string seller_email =15;
	string trade_status =16;
	string total_amount =17;
	string receipt_amount =18;
	string invoice_amount =19;
	string buyer_pay_amount =20;
	string point_amount =21;
	string refund_fee =22;
	string subject =23;
	string body =24;
	string gmt_create =25;
	string gmt_payment =26;
	string gmt_refund =27;
	string gmt_close =28;
	string fund_bill_list =29;
	string passback_params =30;
	string voucher_detail_list =31;
	string method =32;
	string timestamp =33;
	string auth_app_id =34;
}

message AlipayPayNotifyReply {
	int32 code = 1;
	string message = 2;
}

message RechargeCycleByAlipayRequest {
	int32 rechargeChannel = 1;
	float cycle = 2;
	float amount = 3;
}

message RechargeCycleByAlipayReply {
	int32 code = 1;
	string message = 2;
	string url = 3;
}

message RechargeCycleByRedeemCodeRequest {
	int32 redeemCode = 1;
}

message RechargeCycleByRedeemCodeReply {
	int32 code = 1;
	string message = 2;
}